<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoodAndBad</string>
    <string name="action_settings">Settings</string>
    <string name="tagsText">Теги</string>
    <string name="commentsText">Примечания</string>
    <string name="saveButtonText">Сохранить</string>
    <string name="type_good_text_view">Хорошо</string>
    <string name="type_bad_text_view">Плохо</string>
    <string name="title_activity_show_list">Список</string>
    <string name="delete_item">Удалить</string>
    <string name="delete_photo">Очистить фотографию</string>
    <string name="selected_for_delete">Выбрано для удаления</string>
    <string name="title_activity_good_and_bad">Good and Bad</string>
    <string name="title_section1">Категории</string>
    <string name="title_section2">Список</string>
    <string name="action_insert">Добавить</string>
    <string name="action_search">Поиск</string>
    <string name="search_hint">Что изволите?</string>
    <string name="empty_tag">&lt;ХЗ&gt;</string>
    <string name="error_delete_tag">Невозможно удалить непустую категорию</string>


</resources>

