<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.aazayka.goodandbad.app.MainActivity">

    <ImageView
        android:layout_width="@dimen/item_picture_height"
        android:layout_height="@dimen/item_picture_width"
        android:id="@+id/photoImageView"
        android:clickable="true"
        android:onClick="onImageClick"
        android:src="@android:drawable/ic_menu_camera"
        android:scaleType="centerInside"
        android:maxWidth="@dimen/item_picture_width"
        android:minHeight="@dimen/item_picture_height" />

    <ImageButton
        android:layout_width="@dimen/item_picture_width"
        android:layout_height="wrap_content"
        android:id="@+id/takePhotoImageButton"
        android:layout_below="@+id/photoImageView"
        android:src="@android:drawable/ic_menu_camera"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:onClick="onTakePhotoImageButtonClick" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/photoImageView"
        android:orientation="horizontal"
        android:id="@+id/typeRadioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_good_text_view"
            android:id="@+id/goodRadioButton"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_bad_text_view"
            android:id="@+id/badRadioButton"
            android:layout_gravity="right"
            android:checked="false" />
    </RadioGroup>


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/typeRadioGroup"
        android:layout_below="@id/typeRadioGroup"
        android:id="@+id/tagsEditText"
        android:text="@string/tagsText"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/takePhotoImageButton"
        android:inputType="textMultiLine"
        android:lines="5"
        android:ems="10"
        android:id="@+id/commentsEditText"
        android:text="@string/commentsText"
        android:gravity="top|left"

        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveButtonText"
        android:id="@+id/saveButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onButtonSaveClick" />

</RelativeLayout>
